Fix the navigation bar being too short on desktop.
This works around the fix introduced for not being able to scroll-y on
the menu on phone when many links are included.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -264,6 +264,7 @@ main {
         -webkit-transform: translate(0, 0);
         transform: translate(0, 0);
         transition: none;
+        overflow-y: auto;
     }
 
     .navdrawer-container h4 {
@@ -318,6 +319,7 @@ main {
 
     .navdrawer-container {
         padding: 0 16px;
+        overflow-y: auto;
     }
 
     .navdrawer-container li {
